--- a/simple-arc-operator/config/crd/bases/github-practice.boxboat.com_actionsrunnercontrollers.yaml
+++ b/simple-arc-operator/config/crd/bases/github-practice.boxboat.com_actionsrunnercontrollers.yaml
@@ -2,9 +2,9 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: actionsrunnercontrollers.charts.example.com
+  name: actionsrunnercontrollers.github-practice.boxboat.com
 spec:
-  group: charts.example.com
+  group: github-practice.boxboat.com
   names:
     kind: ActionsRunnerController
     listKind: ActionsRunnerControllerList
