--- a/simple-arc-operator/watches.yaml
+++ b/simple-arc-operator/watches.yaml
@@ -1,5 +1,5 @@
 # Use the 'create api' subcommand to add watches to this file.
-- group: charts.example.com
+- group: github-practice.boxboat.com
   version: v1alpha1
   kind: ActionsRunnerController
   chart: helm-charts/actions-runner-controller
