--- a/.github/workflows/bundle-push.yaml
+++ b/.github/workflows/bundle-push.yaml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
     
 jobs:
-  container:
+  bundle:
     runs-on: ubuntu-latest
     steps:    
     - uses: actions/checkout@v3
