--- a/.github/workflows/runner-test.yaml
+++ b/.github/workflows/runner-test.yaml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch: 
 
 jobs:
-  container:
+  test:
     runs-on: ['self-hosted', 'Linux', 'X64']
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
