--- a/.github/workflows/check-upstream.yaml
+++ b/.github/workflows/check-upstream.yaml
@@ -45,5 +45,5 @@ jobs:
 
   generate-operator:
     needs: check-local-version
-    if: needs.check-local-version.outputs.update == 'true' 
+    if: needs.check-local-version.outputs.update == 'false' 
     uses: ./.github/workflows/generate-operator.yaml
