--- a/.github/workflows/bundle-push.yaml
+++ b/.github/workflows/bundle-push.yaml
@@ -22,7 +22,7 @@ jobs:
       run: |
         TAG=${GITHUB_REF#refs/*/}
         if [[ $GITHUB_REF_TYPE != "tag" ]]; then
-          VERSION=$(git tag -l -n1 --format="%(refname:strip=2)")
+          VERSION=$(git tag -l -n1 --format="%(refname:strip=2)" | tail -n1)
           VERSION=$(awk -F. '/[0-9]+\./{$NF++;print}' OFS=. <<< "$VERSION")
           TAG=experimental
           echo "version: $VERSION"
