--- a/.github/workflows/generate-operator.yaml
+++ b/.github/workflows/generate-operator.yaml
@@ -58,6 +58,11 @@ jobs:
             "apiGroups": ["rbac.authorization.k8s.io"],
             "resources": ["clusterrolebindings", "clusterroles", "roles", "rolebindings"],
             "verbs": ["*"]
+          },
+          {
+            "apiGroups": ["admissionregistration.k8s.io"],
+            "resources": ["mutatingwebhookconfigurations", "validatingwebhookconfigurations"],
+            "verbs": ["*"]
           }
         ]' \
           simple-arc-operator/config/rbac/role.yaml
