--- a/simple-arc-operator/config/rbac/role.yaml
+++ b/simple-arc-operator/config/rbac/role.yaml
@@ -106,4 +106,11 @@ rules:
       - rolebindings
     verbs:
       - '*'
+  - apiGroups:
+      - admissionregistration.k8s.io
+    resources:
+      - mutatingwebhookconfigurations
+      - validatingwebhookconfigurations
+    verbs:
+      - '*'
 #+kubebuilder:scaffold:rules
